unpackaged/main/default/objects/Split_Funding__c/Split_Funding__c.object-meta.xml
<CustomObject>
    <label>Split Funding</label>
    <nameField>
        <displayFormat>SplitFunds-{00000}</displayFormat>
        <label>Split Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>