unpackaged/main/default/objects/Split_Funding__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Recipient's bank account number.</description>
    <inlineHelpText>Recipient's bank account number.</inlineHelpText>
    <label>Bank Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>