unpackaged/main/default/objects/Split_Funding__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Split Funding recipient's bank name</description>
    <inlineHelpText>Split Funding recipient's bank name</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>