unpackaged/main/default/objects/Split_Funding__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Split Funding</relationshipLabel>
    <relationshipName>Split_Funding</relationshipName>
    <type>Lookup</type>
</CustomField>