unpackaged/main/default/objects/Split_Funding__c/fields/Funding_Verified__c.field-meta.xml
<CustomField>
    <fullName>Funding_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to verify internal/external payoffs before ACH payment creation</description>
    <label>Funding Verified</label>
    <type>Checkbox</type>
</CustomField>