unpackaged/main/default/objects/Split_Funding__c/fields/Include_in_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Disclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Disclosure</label>
    <type>Checkbox</type>
</CustomField>