unpackaged/main/default/objects/Split_Funding__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Layer</label>
    <type>Checkbox</type>
</CustomField>