unpackaged/main/default/objects/Split_Funding__c/fields/LenderLoan__c.field-meta.xml
<CustomField>
    <fullName>LenderLoan__c</fullName>
    <label>LenderLoan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>