unpackaged/main/default/objects/Split_Funding__c/fields/Name_of_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Recipient__c</fullName>
    <description>Enter the name of the person/entity that will be receiving split funding.</description>
    <inlineHelpText>Enter the name of the person/entity that will be receiving split funding. Limit to 22 characters.</inlineHelpText>
    <label>Name of Recipient</label>
    <length>22</length>
    <type>Text</type>
</CustomField>