unpackaged/main/default/objects/Split_Funding__c/fields/Payoff_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Loan_Number__c</fullName>
    <label>Payoff Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>