unpackaged/main/default/objects/Split_Funding__c/fields/Payoff_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payoff Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Split Funding (Payoff Opportunity)</relationshipLabel>
    <relationshipName>Split_Funding_Payoff</relationshipName>
    <type>Lookup</type>
</CustomField>