unpackaged/main/default/objects/Split_Funding__c/fields/Payoff_Type__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Type__c</fullName>
    <label>Payoff Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Payoff</fullName>
            </value>
            <value>
                <fullName>3rd Party Payoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>