unpackaged/main/default/objects/Split_Funding__c/fields/Recipient_is_National_Funding__c.field-meta.xml
<CustomField>
    <fullName>Recipient_is_National_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Split Funding recipient is National Funding</description>
    <inlineHelpText>Check this box if the Split Funding recipient is National Funding</inlineHelpText>
    <label>Recipient is National Funding</label>
    <type>Checkbox</type>
</CustomField>