unpackaged/main/default/objects/Split_Funding__c/fields/Split_Funding_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Split_Funding_Processed_By__c</fullName>
    <label>Split Funding Processed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>