unpackaged/main/default/objects/Split_Funding__c/fields/Split_Funding_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_Funding_Processed_Date__c</fullName>
    <label>Split Funding Processed Date</label>
    <type>DateTime</type>
</CustomField>