unpackaged/main/default/objects/Split_Funding__c/fields/Split_Funding_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Split_Funding_Recipient__c</fullName>
    <description>Choose who the recipient of the split funding will be. One record should be for the customer.</description>
    <inlineHelpText>Choose who the recipient of the split funding will be. One record should be for the customer.</inlineHelpText>
    <label>Split Funding Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>