unpackaged/main/default/objects/Split_Funding__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Street Address to send the funds to.</description>
    <inlineHelpText>Street Address to send the funds to.</inlineHelpText>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>