unpackaged/main/default/objects/Split_Funding__c/fields/Total_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Amount__c</fullName>
    <formula>Opportunity__r.ACTUAL_AMT_OFFERED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>