unpackaged/main/default/objects/Split_Funding__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Recipient's Zip Code</description>
    <inlineHelpText>Recipient's Zip Code</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>